--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -23,6 +23,8 @@
     scrollbar-width: none; /* Firefox */
   }
 
+
+
   .chat-height {
     @apply h-[calc(100vh_-_8.125rem)] lg:h-[calc(100vh_-_5.625rem)];
   }
@@ -30,4 +32,56 @@
   .inbox-height {
     @apply h-[calc(100vh_-_8.125rem)] lg:h-[calc(100vh_-_5.625rem)];
   }
+
+
 }
+
+/* Estilo para el scrollbar */
+::-webkit-scrollbar {
+  /* Ancho del scrollbar vertical */
+  width: 4px;
+  height: 4px;
+  /* Altura del scrollbar horizontal */
+}
+
+/* Estilo para el scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #1f2937;
+  /* Color del scrollbar thumb */
+  border-radius: 2px;
+  /* Radio de borde del scrollbar thumb */
+}
+
+/* Estilo para el scrollbar track */
+::-webkit-scrollbar-track {
+  background-color: #0f172a;
+  /* Color del scrollbar track */
+}
+
+/* PAGINATOR */
+.pagination-container {
+  display: flex;
+  column-gap: 10px;
+}
+
+.paginate-buttons {
+  @apply h-full w-full px-2 py-1 rounded-md cursor-pointer shadow-md dark:bg-boxdark;
+  
+}
+
+.paginate-buttons:hover {
+  background-color: #17405b;
+}
+
+.active-page{
+  @apply border border-blue-500 dark:text-white bg-blue-500;
+}
+
+.active-page {
+  
+  border: 1px solid #3498db;
+
+  color: white;
+}
+
+
